--- a/CSAproducer.ipynb
+++ b/CSAproducer.ipynb
@@ -20,7 +20,7 @@
     "url = input('Enter kifu URL:')\n",
     "#get url source\n",
     "link = requests.get(url)\n",
-    "soup = BeautifulSoup(link.text, \"lxml\")\n",
+    "soup = BeautifulSoup(link.text, \"html.parser\")\n",
     "info = soup.select_one('div#wrapper div')['data-react-props']\n",
     "prop = json.loads(info)['gameHash']\n",
     "\n",
@@ -35,16 +35,6 @@
     "\n",
     "#board init info\n",
     "text += \"PI\"\n",
-    "#for i in range(len(init_arr)):\n",
-    "#\ttext += \"P\" + str(i+1)\n",
-    "#\tfor c in init_arr[i]:\n",
-    "#\t\tif(c==' '):\n",
-    "#\t\tif(c>='0' and c<='9'):\n",
-    "#\t\t\tfor j in range(int(c)):\n",
-    "#\t\t\t\ttext+=\" * \"\n",
-    "#\t\telse:\n",
-    "#\t\t\ttext += data[c]\n",
-    "#\ttext += \"\\n\"\n",
     "\n",
     "#moves\n",
     "text += \"+\\n\"\n",
@@ -58,8 +48,8 @@
     "\n",
     "#done\n",
     "\n",
-    "pyperclip.copy(text)\n",
-    "print(\"kifu(CSA) copied\")"
+    "print(text)\n",
+
    ]
   },
   {
